; ModuleID = '/home/carl/AnghaBench/i3/testcases/extr_inject_randr1.5.c_readall_into.c'
source_filename = "/home/carl/AnghaBench/i3/testcases/extr_inject_randr1.5.c_readall_into.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i32)* @readall_into to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @readall_into(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i64 0, i64* %8, align 8
  br label %10

10:                                               ; preds = %27, %3
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %31

14:                                               ; preds = %10
  %15 = load i32, i32* %7, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %8, align 8
  %18 = getelementptr i8, i8* %16, i64 %17
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* %8, align 8
  %21 = sub i64 %19, %20
  %22 = call i64 @read(i32 %15, i8* %18, i64 %21)
  store i64 %22, i64* %9, align 8
  %23 = load i64, i64* %9, align 8
  %24 = icmp sle i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %14
  %26 = load i64, i64* %9, align 8
  store i64 %26, i64* %4, align 8
  br label %33

27:                                               ; preds = %14
  %28 = load i64, i64* %9, align 8
  %29 = load i64, i64* %8, align 8
  %30 = add i64 %29, %28
  store i64 %30, i64* %8, align 8
  br label %10

31:                                               ; preds = %10
  %32 = load i64, i64* %8, align 8
  store i64 %32, i64* %4, align 8
  br label %33

33:                                               ; preds = %31, %25
  %34 = load i64, i64* %4, align 8
  ret i64 %34
}

declare dso_local i64 @read(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
